Fix background contrast

--- a/web/public/css/style.scss
+++ b/web/public/css/style.scss
@@ -129,7 +129,7 @@ ul.error {
 
 /* pages */
 .page-index {
-  background: #d2faff;
+  background: #dbfbff;
 }
 
 /* sections */
